--- a/index.html
+++ b/index.html
@@ -35,35 +35,35 @@
 			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
 							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Embracing Diversity & Inclusion</h1>
 							<p class="lead" style="font-family: 'Merienda', cursive;">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block" style="color:#fff;background:none;-webkit-background-clip:initial;-webkit-text-fill-color:#fff;background-clip:initial;text-shadow:none;filter:none;">
 							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Celebrating Differences</h1>
 							<p class="lead" style="font-family: 'Merienda', cursive;">Diversity brings new perspectives and ideas to every environment.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
 							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Inclusive Communities</h1>
 							<p class="lead" style="font-family: 'Merienda', cursive;">Inclusion means everyone has a voice and feels welcome.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
 							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Empowering Success</h1>
 							<p class="lead" style="font-family: 'Merienda', cursive;">Empowerment comes from respect and equal opportunity.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="max-height:400px;object-fit:cover;">
+						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
 							<h1 class="display-4 fw-bold" style="font-family: 'Merienda', cursive;">Together We Thrive</h1>
 							<p class="lead" style="font-family: 'Merienda', cursive;">Collaboration and understanding help everyone succeed.</p>
@@ -84,41 +84,49 @@
     <!-- Principles Section -->
 				<section id="principles" class="container mb-5">
 					<div class="row g-4">
-						<div class="col-12 col-md-6 d-flex">
-							<div class="card flex-fill shadow-sm">
-								<div class="ratio ratio-1x1">
-									<img src="assets/images/what-is-diversity-img.jpeg" class="card-img-top" alt="Diversity illustration" style="object-fit:cover;">
-								</div>
-								<div class="card-body">
-									<h3 class="card-title section-header-gradient">What is Diversity?</h3>
-									<p class="card-text">Diversity means having people from different backgrounds, cultures, genders, ages, abilities, and perspectives. It includes visible differences (like race, gender) and invisible ones (like beliefs, experiences).</p>
-									<ul class="list-group list-group-flush mb-3">
-										<li id="text-hover" class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
-										<li id="text-hover" class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
-										<li id="text-hover" class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
-										<li id="text-hover" class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
-										<li id="text-hover" class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
-										<li id="text-hover" class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
-										<li id="text-hover" class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
-									</ul>
+						<div class="col-12 d-flex">
+							<div class="card flex-fill shadow-sm mb-4">
+								<div class="row g-0 align-items-center">
+									<div class="col-12 col-md-7">
+										<div class="card-body">
+											<h3 class="card-title section-header-gradient">What is Diversity?</h3>
+											<p class="card-text">Diversity means having people from different backgrounds, cultures, genders, ages, abilities, and perspectives. It includes visible differences (like race, gender) and invisible ones (like beliefs, experiences).</p>
+											<ul class="list-group list-group-flush mb-3">
+												<li id="text-hover" class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
+												<li id="text-hover" class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
+												<li id="text-hover" class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
+												<li id="text-hover" class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
+												<li id="text-hover" class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
+												<li id="text-hover" class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
+												<li id="text-hover" class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+										<img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end" alt="Diversity illustration" style="object-fit:cover; width:754.83px; height:607.59px;">
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-md-6 d-flex">
+						<div class="col-12 d-flex">
 							<div class="card flex-fill shadow-sm">
-								<div class="ratio ratio-1x1">
-									<img src="assets/images/diversity-inclusion-activities.png" class="card-img-top" alt="Diversity & Inclusion Activities" style="object-fit:cover;">
-								</div>
-								<div class="card-body">
-									<h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
-									<ul class="list-group list-group-flush mb-0">
-										<li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
-										<li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
-										<li id="text-hover" class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
-										<li id="text-hover" class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
-										<li id="text-hover" class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
-										<li id="text-hover" class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
-									</ul>
+								<div class="row g-0 align-items-center">
+									<div class="col-12 col-md-7">
+										<div class="card-body">
+											<h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
+											<ul class="list-group list-group-flush mb-0">
+												<li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
+												<li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
+												<li id="text-hover" class="list-group-item">Reflects the real world and helps everyone feel welcome. Diverse groups prepare us for working and living in a global society.</li>
+												<li id="text-hover" class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
+												<li id="text-hover" class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
+												<li id="text-hover" class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+										<img src="assets/images/diversity-inclusion-activities.png" class="img-fluid rounded-end" alt="Diversity & Inclusion Activities" style="object-fit:cover; width:754.83px; height:607.59px;">
+									</div>
 								</div>
 							</div>
 						</div>
@@ -132,17 +140,24 @@
 					<div class="row g-4">
 						<div class="col-12 col-lg-8 mx-auto d-flex">
 							<div class="card w-100 h-100 shadow-sm">
-								<div class="card-body">
-									<h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
-									<ol class="list-group list-group-numbered mb-0">
-										<li id="text-hover" class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
-										<li id="text-hover" class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
-										<li id="text-hover" class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
-										<li id="text-hover" class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
-										<li id="text-hover" class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
-										<li id="text-hover" class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
-										<li id="text-hover" class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
-									</ol>
+								<div class="row g-0 align-items-center">
+									<div class="col-12 col-md-7">
+										<div class="card-body">
+											<h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
+											<ol class="list-group list-group-numbered mb-0">
+												<li id="text-hover" class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
+												<li id="text-hover" class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
+												<li id="text-hover" class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
+												<li id="text-hover" class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
+												<li id="text-hover" class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
+												<li id="text-hover" class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
+												<li id="text-hover" class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
+											</ol>
+										</div>
+									</div>
+									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
+										<img src="assets/images/tips.png" class="img-fluid rounded-end" alt="Tips for Diversity & Inclusion" style="object-fit:cover; width:498.16px; height:603.19px;">
+									</div>
 								</div>
 							</div>
 						</div>
