--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Diversity & Inclusion: A Simple Guide</title>
-    <!--Custom CSS-->
+	<!-- Main stylesheet for custom styles -->
 	<link rel="stylesheet" href="assets/css/style.css">
-    <!--Bootstrap CSS-->
+	<!-- Bootstrap 5 CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<style>
+@media (max-width: 991px) {
+  .card-body {
+    max-height: 180px;
+    overflow-y: auto;
+  }
+  .card img {
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+}
+@media (max-width: 575px) {
+  .card-body {
+    max-height: 120px;
+    overflow-y: auto;
+  }
+  .card img {
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+}
+</style>
 </head>
 <body>
-    	<!-- Navigation Bar -->
+		<!-- ...existing code... -->
+	<!-- Navigation Bar -->
 	<nav class="navbar navbar-expand-lg mb-4 custom-navbar sticky-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">Diversity & Inclusion</a>
@@ -18,18 +45,21 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="#hero">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#principles">Principles</a></li>
-					<li class="nav-item"><a class="nav-link" href="#tips">Tips</a></li>
-					<li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
-				</ul>
-				<button id="darkModeToggle" class="btn btn-outline-light ms-3 position-absolute end-0 bottom-0 mb-2 me-2" type="button" style="z-index:1050;">Toggle Dark Mode</button>
+				<div class="d-flex align-items-center ms-auto">
+					<ul class="navbar-nav">
+						<li class="nav-item"><a class="nav-link active" aria-current="page" href="#hero">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="#principles">Principles</a></li>
+						<li class="nav-item"><a class="nav-link" href="#tips">Tips</a></li>
+						<li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+					</ul>
+					<button id="darkModeToggle" class="btn btn-light ms-3" type="button">Toggle Dark Mode</button>
+				</div>
 			</div>
 		</div>
 	</nav>
 
-    <!-- Hero Section -->
+	<!-- ...existing code... -->
+	<!-- Hero Section with Carousel -->
 	<header id="hero" class="py-5 mb-4 custom-hero">
 		<div class="container">
 			<div id="heroCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
@@ -37,35 +67,35 @@
 					<div class="carousel-item active">
 						<img src="assets/images/Copilot_20250827_121432.png" class="d-block w-100 rounded" alt="Group of diverse people smiling together, representing unity and inclusion." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
+							<h1 id="section-header" class="display-4 fw-bold">Embracing Diversity & Inclusion</h1>
 							<p class="lead">Building environments where everyone feels valued, respected, and empowered to succeed.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="assets/images/Copilot_20250827_122046.png" class="d-block w-100 rounded" alt="Hands of different skin tones joined together, symbolizing collaboration and diversity." style="height:400px;object-fit:contain;">
-						<div class="carousel-caption d-block" style="color:#fff;background:none;-webkit-background-clip:initial;-webkit-text-fill-color:#fff;background-clip:initial;text-shadow:none;filter:none;">
-							<h1 class="display-4 fw-bold">Celebrating Differences</h1>
+						<div class="carousel-caption d-block">
+							<h1 id="section-header" class="display-4 fw-bold">Celebrating Differences</h1>
 							<p class="lead">Diversity brings new perspectives and ideas to every environment.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="assets/images/Copilot_20250827_122314.png" class="d-block w-100 rounded" alt="Inclusive classroom with students of various backgrounds learning together." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold">Inclusive Communities</h1>
+							<h1 id="section-header" class="display-4 fw-bold">Inclusive Communities</h1>
 							<p class="lead">Inclusion means everyone has a voice and feels welcome.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="assets/images/Copilot_20250827_122658.png" class="d-block w-100 rounded" alt="Empowered individuals working together in a supportive environment." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold">Empowering Success</h1>
+							<h1 id="section-header" class="display-4 fw-bold">Empowering Success</h1>
 							<p class="lead">Empowerment comes from respect and equal opportunity.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
 						<img src="assets/images/Copilot_20250827_122941.png" class="d-block w-100 rounded" alt="Team celebrating success together, highlighting the power of inclusion." style="height:400px;object-fit:contain;">
 						<div class="carousel-caption d-block">
-							<h1 class="display-4 fw-bold">Together We Thrive</h1>
+							<h1 id="section-header" class="display-4 fw-bold">Together We Thrive</h1>
 							<p class="lead">Collaboration and understanding help everyone succeed.</p>
 						</div>
 					</div>
@@ -81,7 +111,8 @@
 			</div>
 	</div> <!-- Close container for heroCarousel -->
 	</header>
-    <!-- Principles Section -->
+	<!-- ...existing code... -->
+	<!-- Principles Section -->
 				<section id="principles" class="container mb-5">
 					<div class="row g-4">
 						<div class="col-12 d-flex">
@@ -89,21 +120,22 @@
 								<div class="row g-0 align-items-center">
 									<div class="col-12 col-md-7">
 										<div class="card-body">
-											<h3 class="card-title section-header-gradient">What is Diversity?</h3>
-											<p class="card-text">Diversity means having people from different backgrounds, cultures, genders, ages, abilities, and perspectives. It includes visible differences (like race, gender) and invisible ones (like beliefs, experiences).</p>
-											<ul class="list-group list-group-flush mb-3">
-												<li id="text-hover" class="list-group-item">Diversity can be seen in the languages we speak, the foods we eat, and the traditions we celebrate.</li>
-												<li id="text-hover" class="list-group-item">It’s reflected in our unique life stories, interests, and ways of thinking.</li>
-												<li id="text-hover" class="list-group-item">For example, a classroom or workplace with people from different countries, age groups, and abilities is more diverse.</li>
-												<li id="text-hover" class="list-group-item">Diversity also means respecting and valuing these differences, not just noticing them.</li>
-												<li id="text-hover" class="list-group-item">Diversity includes people with different learning styles, personalities, and talents, which enriches group experiences.</li>
-												<li id="text-hover" class="list-group-item">It can be as simple as having classmates who celebrate different holidays, speak different languages at home, or have different hobbies.</li>
-												<li id="text-hover" class="list-group-item">Diversity helps us learn from each other and prepares us to work with people from all walks of life.</li>
+											<h3 id="section-header" class="card-title section-header-gradient">What is Diversity?</h3>
+											<ul class="list-group list-group-flush mb-0">
+												<li id="text-hover" class="list-group-item">Brings together people from different backgrounds, cultures, and experiences.</li>
+												<li id="text-hover" class="list-group-item">Celebrates unique perspectives, talents, and ways of thinking.</li>
+												<li id="text-hover" class="list-group-item">Includes visible differences (race, gender, age) and invisible ones (beliefs, interests).</li>
+												<li id="text-hover" class="list-group-item">Creates richer conversations and learning opportunities.</li>
+												<li id="text-hover" class="list-group-item">Helps us understand and respect each other's stories.</li>
+												<li id="text-hover" class="list-group-item">Prepares us to work and live in a global society.</li>
+												<li id="text-hover" class="list-group-item">Builds stronger, more creative, and resilient communities.</li>
+												<li id="text-hover" class="list-group-item">Encourages us to value and include everyone.</li>
+											</ul>
 											</ul>
 										</div>
 									</div>
 									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-										<img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end" alt="Diversity illustration" style="object-fit:cover; width:754.83px; height:607.59px;">
+										<img src="assets/images/what-is-diversity-img.jpeg" class="img-fluid rounded-end w-100" alt="Diversity illustration" style="object-fit:contain;">
 									</div>
 								</div>
 							</div>
@@ -113,7 +145,7 @@
 								<div class="row g-0 align-items-center">
 									<div class="col-12 col-md-7">
 										<div class="card-body">
-											<h3 class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
+											<h3 id="section-header" class="card-title section-header-gradient">Why is Diversity & Inclusion Important?</h3>
 											<ul class="list-group list-group-flush mb-0">
 												<li id="text-hover" class="list-group-item">Leads to better ideas and problem-solving. When people with different experiences work together, they find creative solutions.</li>
 												<li id="text-hover" class="list-group-item">Improves teamwork and morale. People feel happier and more motivated when they know they belong.</li>
@@ -121,11 +153,14 @@
 												<li id="text-hover" class="list-group-item">Encourages learning and growth. Exposure to new perspectives helps us learn and grow as individuals.</li>
 												<li id="text-hover" class="list-group-item">Reduces discrimination and bias. Inclusive environments challenge stereotypes and promote fairness.</li>
 												<li id="text-hover" class="list-group-item">For example, companies with diverse teams often perform better and schools that value inclusion help all students succeed.</li>
+												<li id="text-hover" class="list-group-item">Boosts innovation and adaptability. Organizations that embrace diversity are better equipped to respond to change and new challenges.</li>
+												<li id="text-hover" class="list-group-item">Strengthens community and trust. Inclusion builds stronger relationships and a sense of belonging for everyone involved.</li>
+												<li id="text-hover" class="list-group-item">Promotes equal opportunities. When everyone is included, people have a fair chance to contribute and succeed.</li>
 											</ul>
 										</div>
 									</div>
 									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-										<img src="assets/images/diversity-inclusion-activities.png" class="img-fluid rounded-end" alt="Diversity & Inclusion Activities" style="object-fit:cover; width:754.83px; height:607.59px;">
+										<img src="assets/images/diversity-inclusion-activities.png" class="img-fluid rounded-end w-100" alt="Diversity & Inclusion Activities" style="object-fit:contain;">
 									</div>
 								</div>
 							</div>
@@ -135,28 +170,33 @@
 	</section>
 	</section>
 
-    <!-- Tips Section -->
+	<!-- ...existing code... -->
+	<!-- Tips Section -->
 				<section id="tips" class="container mb-5">
 					<div class="row g-4">
-						<div class="col-12 col-lg-8 mx-auto d-flex">
-							<div class="card w-100 h-100 shadow-sm">
-								<div class="row g-0 align-items-center">
-									<div class="col-12 col-md-7">
+						<div class="col-12 d-flex">
+							<div class="card flex-fill shadow-sm">
+								<div class="row g-0 align-items-stretch flex-column flex-md-row">
+									<div class="col-12 col-md-5 d-flex justify-content-center align-items-center order-1 order-md-2">
+										<img src="assets/images/tips.png" class="img-fluid rounded-end w-100" alt="Tips for Diversity & Inclusion" style="object-fit:contain; max-width:500px;">
+									</div>
+									<div class="col-12 col-md-7 d-flex flex-column justify-content-center order-2 order-md-1">
 										<div class="card-body">
-											<h3 class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
+											<h3 id="section-header" class="card-title mb-4 section-header-gradient">Simple Tips for Promoting Diversity & Inclusion</h3>
 											<ol class="list-group list-group-numbered mb-0">
-												<li id="text-hover" class="list-group-item"><strong>Listen to Others:</strong> Encourage open conversations and respect different viewpoints.</li>
-												<li id="text-hover" class="list-group-item"><strong>Challenge Bias:</strong> Be aware of stereotypes and avoid making assumptions.</li>
-												<li id="text-hover" class="list-group-item"><strong>Celebrate Differences:</strong> Recognize and appreciate cultural events, holidays, and traditions.</li>
-												<li id="text-hover" class="list-group-item"><strong>Use Inclusive Language:</strong> Avoid terms that exclude or offend others.</li>
-												<li id="text-hover" class="list-group-item"><strong>Support Equal Opportunities:</strong> Ensure fair access to resources, roles, and advancement.</li>
-												<li id="text-hover" class="list-group-item"><strong>Educate Yourself:</strong> Learn about different cultures, backgrounds, and experiences.</li>
-												<li id="text-hover" class="list-group-item"><strong>Speak Up:</strong> If you see unfair treatment, address it respectfully.</li>
+												<li id="text-hover" class="list-group-item"><strong>Listen actively:</strong> Value every voice and perspective.</li>
+												<li id="text-hover" class="list-group-item"><strong>Challenge bias:</strong> Notice and address stereotypes.</li>
+												<li id="text-hover" class="list-group-item"><strong>Celebrate differences:</strong> Appreciate cultures, traditions, and backgrounds.</li>
+												<li id="text-hover" class="list-group-item"><strong>Use inclusive language:</strong> Choose words that welcome everyone.</li>
+												<li id="text-hover" class="list-group-item"><strong>Support equal opportunities:</strong> Make sure everyone has a fair chance.</li>
+												<li id="text-hover" class="list-group-item"><strong>Educate yourself:</strong> Learn about others’ experiences and cultures.</li>
+												<li id="text-hover" class="list-group-item"><strong>Speak up:</strong> Address unfair treatment respectfully.</li>
+												<li id="text-hover" class="list-group-item"><strong>Practice empathy:</strong> Try to understand others’ feelings.</li>
+												<li id="text-hover" class="list-group-item"><strong>Encourage collaboration:</strong> Work together to achieve common goals.</li>
+												<li id="text-hover" class="list-group-item"><strong>Mentor and support:</strong> Help others grow and feel included.</li>
+												<li id="text-hover" class="list-group-item"><strong>Promote accessibility:</strong> Make spaces and resources available to all.</li>
 											</ol>
 										</div>
-									</div>
-									<div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
-										<img src="assets/images/tips.png" class="img-fluid rounded-end" alt="Tips for Diversity & Inclusion" style="object-fit:cover; width:498.16px; height:603.19px;">
 									</div>
 								</div>
 							</div>
@@ -164,29 +204,36 @@
 					</div>
 				</section>
 
-    <!-- Resources Section -->
+	<!-- ...existing code... -->
 					<div class="w-100 clearfix mb-5"></div>
-									<section id="resources" class="container mb-5 pt-3">
-										<div class="alert alert-info" role="alert">
-											<div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
-												  <div class="fw-bold section-header-gradient mb-3 mb-md-0 me-md-3 text-center text-md-start resources-bar-title">Explore More Resources:</div>
-												<div class="d-flex flex-column flex-md-row align-items-center justify-content-center w-100">
-													<a href="https://www.diversityresources.com/" target="_blank" class="btn btn-primary m-2">Diversity Resources</a>
-													<a href="https://www.inclusionhub.com/" target="_blank" class="btn btn-success m-2">Inclusion Hub</a>
-													<a href="https://www.edutopia.org/article/creating-inclusive-classroom" target="_blank" class="btn btn-info m-2">Inclusive Classroom Guide</a>
+					<!-- Resources Section: Explore More Resources Card -->
+								<section id="resources" class="container mb-5 pt-3">
+									<div class="row justify-content-center">
+										<div class="col-12 col-lg-8 d-flex">
+											<div class="card w-100 h-100 shadow-sm resources-card">
+												<div class="card-body d-flex flex-column flex-md-row align-items-center justify-content-center">
+													<div class="fw-bold section-header-gradient mb-3 mb-md-0 me-md-3 text-center text-md-start resources-bar-title">Explore More Resources:</div>
+													<div class="d-flex flex-column flex-md-row align-items-center justify-content-center w-100">
+														<a href="https://www.diversityresources.com/" target="_blank" class="btn btn-primary m-2">Diversity Resources</a>
+														<a href="https://www.inclusionhub.com/" target="_blank" class="btn btn-success m-2">Inclusion Hub</a>
+														<a href="https://www.edutopia.org/article/creating-inclusive-classroom" target="_blank" class="btn btn-info m-2">Inclusive Classroom Guide</a>
+													</div>
 												</div>
 											</div>
 										</div>
-									</section>
+									</div>
+								</section>
 
-    <!-- Footer -->
+	<!-- ...existing code... -->
+	<!-- Footer -->
 	<footer id="footer" class="footer mt-auto py-3 text-white fixed-bottom">
 		<div class="container text-center">
 			<span class="small">&copy; 2025 Diversity & Inclusion Guide. All rights reserved.</span>
 		</div>
 	</footer>
 
-    <!--Js Bootstrap script-->
+	<!-- ...existing code... -->
+		<!-- Bootstrap JS Bundle and Custom Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script>
       // Dark mode toggle
